[tool.poetry]
name = "my-site"
version = "0.1.0"
description = ""
authors = ["kvanderveen <kevin.r.vanderveen@gmail.com>"]
readme = "README.md"
packages = [{include = "my_site"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
